# sgctp

./: CMakeLists.txt  CODING  COPYRIGHT  INSTALL  PROTOCOL  README  VERSION.in
cmake/modules/: FindLibgcrypt.cmake
debian/: changelog  control  copyright  libsgctp-dev.install  libsgctp-doc.install  libsgctp1.install  rules  sgctp-daemons.default  sgctp-daemons.init  sgctp-daemons.install  sgctp-daemons.postinst  sgctp-utils-doc.install  sgctp-utils.lintian-overrides
src/: CMakeLists.txt
src/debug/: CMakeLists.txt  main.cpp
src/doc/lib/: doxygen.conf.in
src/doc/utils/html/en/: index.html
src/lib/: CMakeLists.txt  data.cpp  payload.cpp  payload_aes128.cpp  principal.cpp  transmit.cpp  transmit_file.cpp  transmit_tcp.cpp  transmit_udp.cpp
src/lib/sgctp/: data.hpp  parameters.hpp  payload.hpp  payload_aes128.hpp  principal.hpp  sgctp.hpp  transmit.hpp  transmit_file.hpp  transmit_tcp.hpp  transmit_udp.hpp  version.hpp.in
src/sample/: principals
src/utils/: CMakeLists.txt  skeleton.cpp  skeleton.hpp
src/utils/ais2sgctp/: CMakeLists.txt  main.cpp  main.hpp
src/utils/flarm2sgctp/: CMakeLists.txt  main.cpp  main.hpp
src/utils/gps2sgctp/: CMakeLists.txt  main.cpp  main.hpp
src/utils/hub2sgctp/: CMakeLists.txt  main.cpp  main.hpp
src/utils/sbs2sgctp/: CMakeLists.txt  main.cpp  main.hpp
src/utils/sgctp2dsv/: CMakeLists.txt  main.cpp  main.hpp
src/utils/sgctp2gpx/: CMakeLists.txt  main.cpp  main.hpp
src/utils/sgctp2tcp/: CMakeLists.txt  main.cpp  main.hpp
src/utils/sgctp2udp/: CMakeLists.txt  main.cpp  main.hpp
src/utils/sgctp2xml/: CMakeLists.txt  main.cpp  main.hpp
src/utils/sgctperror/: CMakeLists.txt  main.cpp  main.hpp
src/utils/sgctpfilter/: CMakeLists.txt  main.cpp  main.hpp
src/utils/sgctphub/: CMakeLists.txt  main.cpp  main.hpp
src/utils/tcp2sgctp/: CMakeLists.txt  main.cpp  main.hpp
src/utils/udp2sgctp/: CMakeLists.txt  main.cpp  main.hpp
